# face-touching-detector

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker_build.sh  docker_run.sh
labels/: classes.txt
res/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/detector/: detector.cpp  detector.h  detectors.h
src/detector/yolov5/: yolov5.cpp  yolov5.h  yolov5_config.h
src/ft-detector/: CMakeLists.txt  bbox_intersect_listener.cpp  detector.cpp  yolov5.cpp
src/ft-detector-app/: CMakeLists.txt  detector_qt.cpp  detector_qt.h  ft_detector_capture.cpp  ft_detector_capture.h  main_gui.cpp  main_window.cpp  main_window.h  main_window.ui
src/ft-detector/include/ft-detector/: bbox_intersect_listener.h  bbox_intersect_notifier.h  detector.h  detectors.h  utils.h  yolov5.h  yolov5_config.h
tests/: CMakeLists.txt  yolov5_test.cpp
